--- a/css10/css/style.css
+++ b/css10/css/style.css
@@ -38,10 +38,10 @@
 /* ------------------------------------------------------ */
 
 .blue {
-  /* position: relative;
+  /* position: relative; */
   top: 100px;
   left: 100px;
-  z-index: -1; */
+  /* z-index: -1;  */
   position: sticky;
   top: 10px;
 }
@@ -59,10 +59,10 @@
 }
 
 .red {
-  /* position: fixed;
+  /* position: fixed; */
   top: 50%;
-  left: 50%;
-  z-index: -1; */
+  /* left: 50%; */
+  /* z-index: -1;  */
   position: sticky;
   top: 100px;
 }
