--- a/css10/css/style.css
+++ b/css10/css/style.css
@@ -1,73 +1,253 @@
-.wrapper {
-  padding: 100px 15px;
-  height: 100vh;
+.sitename {
+  color: black;
+  text-decoration: none;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 1000px;
-  height: 100%;
-  border: 10px solid #999;
-  display: flex;
+h1 {
+  text-shadow: rgb(169, 169, 169) 3px 3px 5px;
+  cursor: pointer;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-feature-settings: normal;
+  font-kerning: auto;
+  font-optical-sizing: auto;
+  font-size: 53.3333px;
+  font-weight: 400;
+  font-variation-settings: normal;
+  font-variant-position: normal;
+  font-stretch: 100%;
+  font-style: normal;
 }
 
-.block {
-  height: 300px;
-  width: 100%;
-  max-width: 200px;
-  border-radius: 10px;
-  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.842);
+p {
+  color: black;
+  display: block;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-feature-settings: normal;
+  font-kerning: auto;
+  font-optical-sizing: auto;
+  font-size: 19.6667px;
+  font-style: normal;
+  font-variant-alternates: normal;
+  font-variant-caps: normal;
+  font-variant-east-asian: normal;
+  font-variant-position: normal;
+  font-variation-settings: normal;
+  font-weight: 400px;
+  line-height: 18.6667px;
+  margin-block-end: 0px;
+  margin-block-start: 0px;
+  margin-bottom: 0px;
+  margin-inline-end: 0px;
+  margin-inline-start: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 3px;
+  text-align: left;
+  text-shadow: rgb(169, 169, 169) 3px 3px 5px;
 }
 
-.red {
-  background-color: rgb(235, 118, 118);
-}
-.blue {
-  background-color: rgb(80, 91, 235);
-}
-.orange {
-  background-color: rgb(224, 158, 59);
-}
-.green {
-  background-color: rgb(113, 212, 113);
-}
-.purple {
-  background-color: rgb(205, 148, 231);
-}
-
-/* ------------------------------------------------------ */
-
-.blue {
-  /* position: relative; */
-  top: 100px;
-  left: 100px;
-  /* z-index: -1;  */
-  position: sticky;
-  top: 10px;
-}
-
-/* .container {
-  position: relative;
-} */
-
-.orange {
-  /* position: absolute;
-  top: 300px;
-  left: 80%; */
-  position: sticky;
-  top: 50px;
+.info {
+  background-color: rgb(236, 236, 236);
+  border-bottom-color: rgb(2, 87, 163);
+  border-bottom-style: dotted;
+  border-bottom-width: 1px;
+  border-top-color: rgb(2, 87, 163);
+  border-top-style: solid;
+  border-top-width: 10px;
+  color: rgb(0,0,0,);
+  display: block;
+  font-size: 29.3333px;
+  font-feature-settings: normal;
+  font-kerning: auto;
+  font-optical-sizing: auto;
+  font-stretch: 100%;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29.3333px;
+  margin-bottom: 0px;
+  margin-left: 256px;
+  margin-right: 0px;
+  margin-top: -110px;
+  padding-bottom: 5px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 5px;
+  text-align: left;
+  text-shadow: rgb(169, 169, 169) 3px 3px 5px;
+  width: 736px;
 }
 
-.red {
-  /* position: fixed; */
-  top: 50%;
-  /* left: 50%; */
-  /* z-index: -1;  */
-  position: sticky;
-  top: 100px;
+.personinfo {
+  background-color: rgb(236, 236, 236);
+  border-bottom-color: rgb(2, 87, 163);
+  border-bottom-style: dotted;
+  border-bottom-width: 1px;
+  border-top-color: rgb(2, 87, 163);
+  border-top-style: solid;
+  border-top-width: 10px;
+  color: rgb(0,0,0,);
+  display: block;
+  font-size: 29.3333px;
+  font-feature-settings: normal;
+  font-kerning: auto;
+  font-optical-sizing: auto;
+  font-stretch: 100%;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29.3333px;
+  margin-bottom: 0px;
+  margin-left: 256px;
+  margin-right: 0px;
+  margin-top: -110px;
+  padding-bottom: 5px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 5px;
+  text-align: left;
+  text-shadow: rgb(169, 169, 169) 3px 3px 5px;
+  width: 736px;
 }
 
-.green {
-  position: sticky;
-  top: 0;
+.content {
+  display: block;
+  float: right;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-feature-settings: normal;
+  font-kerning: auto;
+  font-optical-sizing: auto;
+  font-size: 16px;
+  font-stretch: 100%;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18.6667px;
+  margin-bottom: 30px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  text-align: left;
+  width: 738px;
+}
+
+h3 {
+  color: rgb(2, 87, 163);
+  display: block;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-feature-settings: normal;
+  font-kerning: auto;
+  font-optical-sizing: auto;
+  font-size: 26.6667px;
+  font-stretch: 100%;
+  font-style: normal;
+  font-variant-alternates: normal;
+  font-variant-caps: normal;
+  font-variant-east-asian: normal;
+  font-variant-ligatures: normal;
+  font-variant-numeric: normal;
+  font-variant-position: normal;
+  font-weight: 400;
+  line-height: 29.3333px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  text-align: left;
+  text-shadow: rgb(169, 169, 169);
+}
+
+.lastupdate {
+  background-color: rgb(255, 255, 255);
+  border-bottom-color: rgb(0, 255, 0);
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-bottom-style: dotted;
+  border-bottom-width: 2px;
+  border-image-outset: 0;
+  border-image-repeat: stretch;
+  border-image-slice: 100%;
+  border-image-source: none;
+  border-image-width: 1;
+  border-left-color: rgb(0, 128, 0);
+  border-left-style: dotted;
+  border-left-width: 2px;
+  border-right-color: rgb(0, 128, 0);
+  border-right-style: dotted;
+  border-right-width: 2px;
+  border-top-color: rgb(0, 128, 0);
+  border-top-style: dotted;
+  border-top-width: 2px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-top-style: dotted;
+  border-top-width: 2px;
+  color: black;
+  display: block;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-feature-settings: normal;
+  font-kerning: auto;
+  font-optical-sizing: auto;
+  font-size: 16px;
+  font-stretch: 100%;
+  font-style: normal;
+  font-variant-alternates: normal;
+  font-variant-caps: normal;
+  font-variant-east-asian: normal;
+  font-variant-caps: normal;
+  font-variant-ligatures: normal;
+  font-variant-numeric: normal;
+  font-variant-position: normal;
+  font-variation-settings: normal;
+  font-weight: 400;
+  /* height: 37.3125px; */
+  line-height: 18.6667px;
+  margin-inline-end: 20px;
+  margin-inline-start: 40px;
+  margin-bottom: 20px;
+  margin-inline-end: 27px;
+  margin-inline-start: 27px;
+  margin-left: 27px;
+  margin-right: 27px;
+  margin-top: 40px;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  text-align: left;
+  width: 650px;
+  background-color: rgb(177, 236, 177);
+}
+
+th.bottom.center {
+  background-color: rgb(207, 207, 207);
+  border-bottom-color: rgb(128, 128, 128);
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-collapse: separate;
+  border-top-color: rgb(128, 128, 128);
+  border-top-style: solid;
+  border-top-width: 1px;
+  display: table-cell;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-feature-settings: normal;
+  font-kerning: auto;
+  font-optical-sizing: auto;
+  font-size: 16px;
+  font-stretch: 100%;
+  font-style: normal;
+  font-variant-alternates: normal;
+  font-variant-caps: normal;
+  font-variant-east-asian: normal;
+  font-variant-ligatures: normal;
+  font-variant-numeric: normal;
+  font-variant-position: normal;
+  font-variation-settings: normal;
+  font-weight: 700;
 }
