--- a/css10/css/style.css
+++ b/css10/css/style.css
@@ -1,21 +1,33 @@
 .sitename {
   color: black;
-  text-decoration: none;
+  text-decoration: solid;
+}
+
+.left__line {
+	border-inline-end: 2px dotted rgb(2, 87, 163);
+}
+
+
+.left__line {
+  width: 751px;
+  height: 1285px;
 }
 
 h1 {
+
   text-shadow: rgb(169, 169, 169) 3px 3px 5px;
   cursor: pointer;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-feature-settings: normal;
   font-kerning: auto;
   font-optical-sizing: auto;
-  font-size: 53.3333px;
+  font-size: 54px;
   font-weight: 400;
   font-variation-settings: normal;
   font-variant-position: normal;
   font-stretch: 100%;
   font-style: normal;
+  height: 80px;
 }
 
 p {
@@ -45,7 +57,7 @@ p {
   padding-bottom: 0px;
   padding-left: 0px;
   padding-right: 3px;
-  text-align: left;
+  text-align: right;
   text-shadow: rgb(169, 169, 169) 3px 3px 5px;
 }
 
@@ -84,7 +96,7 @@ aside#info {
   padding-top: 5px;
   text-align: left;
   text-shadow: rgb(169, 169, 169) 3px 3px 5px;
-  width: 736px;
+  width: 750px;
 }
 
 span#personinfo {
@@ -120,7 +132,7 @@ span#personinfo {
 
 section#content {
   display: block;
-  float: right;
+  float: left;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-feature-settings: normal;
   font-kerning: auto;
